# AgileX_Autonomous_Driving_CU

./: LICENSE  README.md  nav2_load_map.bash  nav2_setup.bash  pointcloud-to-laserscan.py Configuration  scout_v2.xacro  symlinks.sh
bash scripts/: nav2_manual.bash
inertial-sense-sdk/ExampleProjects/Logger/: CMakeLists.txt
inertial-sense-sdk/ExampleProjects/lib_build/: CMakeLists.txt
inertial-sense-sdk/src/: ISBootloaderBase.cpp  ISBootloaderBase.h  ISBootloaderDFU.h  IS_uINS-3_v1.11.2_b14_2024-02-19_150638.hex
is_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
is_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
is_ws/install/test/share/test/: local_setup.sh  package.sh
is_ws/log/: latest_build
is_ws/src/cpp_pubsub/: CMakeLists.txt
is_ws/src/cpp_pubsub/src/: publisher_member_function.cpp
map/: CAMP_v4.yaml
maps/: CAMP_v3.yaml  ERC1.pgm  ERC1.yaml  ERC_to_CAMP_2.yaml  StudentCenterPerim.yaml
maps/old-maps/: CAMP2.data  CAMP2.yaml  CAMP2_2.data  CAMP2_2.pgm  CAMP2_2.yaml  CAMP2_2_params.yaml  CAMP2_params.yaml  Lab1.pgm  Lab1.yaml  Lab5.pgm  Lab5.yaml  Lab7.data  Lab7.pgm  Lab7.yaml  map_1720641271.yaml  map_1720719286.pgm  map_1720719286.yaml
modified/: copy.sh
modified/nav2_bringup/launch/: my_navigation_launch.py  navigation_map_v2_launch.py  navigation_with_map_launch.py
modified/nav2_bringup/params/: nav2_params.yaml.backupwshimandpoly
modified/scout_description/urdf/: scout_wheel_type1.xacro
nav2_bringup/: nav2_params.yaml
nav2_collision_monitor/: collision_monitor_node.launch.py  collision_monitor_params.yaml
pointcloud_to_laserscan/: sample_pointcloud_to_laserscan_launch.py
rslidar_sdk/: config.yaml
scout_description/: scout_mini.xacro  scout_mini_description.launch.py  scout_mini_wheel.xacro  scout_v2.xacro
scripts/: nav2_load_map.bash  nav2_manual.bash  nav2_setup.bash  not_nav2_setup.bash
slam-toolbox/: localization_launch.py
